--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,8 +1,6 @@
 ---
-
 collections:
-  - name: community.postgresql
-    version: 2.1.5
-  - name: community.mysql.mysql_query
-    version: 2.3.7
+  - name: https://github.com/ansible-collections/community.postgresql
+    type: git
+    version: main
 
