dr_mysql change 0.2

--- a/dr_mysql.yml
+++ b/dr_mysql.yml
@@ -16,6 +16,11 @@
         dir: vars/{{ ambiente }}/{{ sito }}
         depth: 1
 
+    - name: install mysql 
+      pip:
+        name: pymsql
+        state: present
+
     # 
     # Should POST "Start-Up" to other Orchestrators
     #
