--- a/test_collections.yml
+++ b/test_collections.yml
@@ -5,8 +5,8 @@
 
   tasks:
 
-    - name: hostname
-      command: hostname
+    - name: cmd 1
+      command: ls -la && id
       register: h_name
 
     - debug:
