added uri secret 1

--- a/dr_uri_secret.yml
+++ b/dr_uri_secret.yml
@@ -43,10 +43,10 @@
 
     - name: get URI
       uri:
-        url: "{{ rest_uri.uri }}"
+        url: "{{ get_uri.uri }}"
         method: GET
-        user: "{{ rest_uri.usr }}"
-        password: "{{ rest_uri.pwd }}"
+        user: "{{ get_uri.usr }}"
+        password: "{{ get_uri.pwd }}"
         force_basic_auth: yes
         return_content: yes
         validate_certs: no
