added linux_serers fix 3

--- a/test_linux_parallel.yml
+++ b/test_linux_parallel.yml
@@ -24,7 +24,7 @@
 
     - name: write files
       shell: date +"%T.%N" > /tmp/ans_test_parallel.txt
-      async: 10
-      poll: 5
+#      async: 10
+#      poll: 5
       when: inventory_hostname in linux_servers
 
