added test oracle fix 3

--- a/test_oracle.yml
+++ b/test_oracle.yml
@@ -49,5 +49,5 @@
 
     - debug: 
         var: sqlout
-      when: sqlout is defoned and inventory_hostname in oracle_servers
+      when: sqlout is defined and inventory_hostname in oracle_servers
 
