added test oracle fix 5

--- a/test_oracle.yml
+++ b/test_oracle.yml
@@ -42,7 +42,8 @@
 
     - name: run sqlplus command
       remote_user: oracle
-      shell: . ./.bash_profile && sqlplus -s {{ ora_usr }}/{{ ora_pwd }}@{{ ora_sid }} @/tmp/run_query.sql
+      shell: pwd && id
+      #shell: . ./.bash_profile && sqlplus -s {{ ora_usr }}/{{ ora_pwd }}@{{ ora_sid }} @/tmp/run_query.sql
       register: sqlout
       when: inventory_hostname in oracle_servers
 
