--- a/test_oracle.yml
+++ b/test_oracle.yml
@@ -45,8 +45,8 @@
       become_user: oracle
       become_method: su
       #remote_user: oracle
-      shell: pwd && id
-      #shell: . ./.bash_profile && sqlplus -s {{ ora_usr }}/{{ ora_pwd }}@{{ ora_sid }} @/tmp/run_query.sql
+      #shell: pwd && id
+      shell: sqlplus -s {{ ora_usr }}/{{ ora_pwd }}@{{ ora_sid }} @/tmp/run_query.sql
       register: sqlout
       when: inventory_hostname in oracle_servers
 
