added test oracle fix 11

--- a/test_oracle.yml
+++ b/test_oracle.yml
@@ -28,13 +28,13 @@
 
     - copy:
         content:
-          set markup csv on
-          set heading off
-          set pagesize 0
-          set feedback off
-          set null 'missing'
-          select h_name,h_ip from hosts;
-          exit;
+          set markup csv on\n
+          set heading off\n
+          set pagesize 0\n
+          set feedback off\n
+          set null 'missing'\n
+          select h_name,h_ip from hosts;\n
+          exit;\n
         dest: /tmp/run_query.sql
         owner: oracle
         group: oinstall
