added test oracle fix 13

--- a/test_oracle.yml
+++ b/test_oracle.yml
@@ -20,7 +20,7 @@
       run_once: true
       delegate_to: localhost
 
-    - vars:
+    - set_fact:
         my_query: |
           set markup csv on
           set heading off
