--- a/test_oracle_2.yml
+++ b/test_oracle_2.yml
@@ -47,7 +47,6 @@
       delegate_to: "{{ oracle_server }}"
 
     - name: run sqlplus command
-      no_log: true
       become: true
       become_user: oracle
       become_method: su
@@ -59,6 +58,6 @@
       #when: inventory_hostname in oracle_servers
 
     - debug: 
-        var: sqlout
+        var: sqlout.stdout_lines
       when: sqlout is defined
 
