modify collections requirements 2

--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,8 +1,8 @@
 ---
 collections:
-  - name: https://github.com/ansible-collections/community.postgresql
-    type: git
-    version: main
+#  - name: https://github.com/ansible-collections/community.postgresql
+#    type: git
+#    version: main
   - name: https://github.com/ansible-collections/community.mysql
     type: git
     version: main
