--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,14 +1,17 @@
 ---
 collections:
+  - name: git+https://github.com/ansible-collections/community.general
+    type: git
+    version: main
   - name: git+https://github.com/ansible-collections/community.postgresql
     type: git
     version: main
   - name: git+https://github.com/ansible-collections/community.mysql
     type: git
     version: main
-#  - name: https://github.com/ari-stark/ansible-oracle-modules.git
-#    type: git
-#    version: main
+  - name: https://github.com/ari-stark/ansible-oracle-modules.git
+    type: git
+    version: main
 #  - name: https://github.com/Cyberitas/ansible-role-sqlserver.git
 #    type: git
 #    version: main
