modify collections add all 5

--- a/test_collections.yml
+++ b/test_collections.yml
@@ -6,6 +6,7 @@
     - community.mysql
     - community.windows
     - community.postgresql
+    - community.general.odbc
   connection: local
   gather_facts: true
   vars:
