modify collections add all 7

--- a/test_collections.yml
+++ b/test_collections.yml
@@ -6,7 +6,6 @@
     - community.mysql
     - community.windows
     - community.postgresql
-    - community.general.odbc
   connection: local
   gather_facts: true
   vars:
@@ -37,13 +36,13 @@
     - debug:
         var: sqlout.data
 
-    - name: test odbc drive
-      odbc:
-        dsn: "DRIVER={ODBC Driver 13 for SQL Server};Server=mfoo.betatest.local;Database=WPDR0_DR2H_COLLAUDO;UID=WPDR0_TMC;PWD=WPDR0_TMC;"
-        query: "Select * from DR2H_RIPARTENZA_COLLAUDO_DR_TOvsPR"
-        commit: false
-      register: sqlout
-      ignore_errors: true
+#   - name: test odbc drive
+#     odbc:
+#       dsn: "DRIVER={ODBC Driver 13 for SQL Server};Server=mfoo.betatest.local;Database=WPDR0_DR2H_COLLAUDO;UID=WPDR0_TMC;PWD=WPDR0_TMC;"
+#       query: "Select * from DR2H_RIPARTENZA_COLLAUDO_DR_TOvsPR"
+#       commit: false
+#     register: sqlout
+#     ignore_errors: true
 
     - debug:
         var: sqlout.data
