--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,24 +1,11 @@
 ---
 collections:
-  - name: git+https://github.com/ansible-collections/community.general
-    type: git
-    version: main
-  - name: git+https://github.com/ansible-collections/community.postgresql
-    type: git
-    version: main
-  - name: git+https://github.com/ansible-collections/community.mysql
-    type: git
-    version: main
-#  - name: https://github.com/ari-stark/ansible-oracle-modules.git
-#    type: git
-#    version: main
-#  - name: https://github.com/Cyberitas/ansible-role-sqlserver.git
-#    type: git
-#    version: main
-  - name: git+https://github.com/ansible-collections/community.windows.git
-    type: git
-    version: main
-#  - name: https://github.com/ansible-collections/community.mongodb.git
-#    type: git
-#    version: main
+  - ansible.windows
+  - community.general
+  - community.mysql
+  - community.mongodb
+  - community.postgresql
+  - community.windows
+  - google.cloud
+
 
