--- a/query_mssql_server.yml
+++ b/query_mssql_server.yml
@@ -20,22 +20,31 @@
 
   tasks:
 
-    - name: query mssql server database
+    - name: query mssql server database - odbc
       community.general.odbc:
         dsn: "DRIVER={Oracle Driver};DBQ=mfoo.betatest.local:1433/WPDR0_DR2H_COLLAUDO;UID=WPDR0_TMC;PWD=WPDR0_TMC;"
         query: "select * from DR2H_RIPARTENZA_COLLAUDO_DR_TOvsPR"
         commit: false
       register: sqlout
+      ignore_errors: true
 
-#    - name: query database
-#      community.general.mssql_script:
-#        login_user: WPDR0_TMC
-#        login_password: WPDR0_TMC
-#        login_host: mfoo.betatest.local 
-#        db: WPDR0_DR2H_COLLAUDO
-#        script: |
-#          select * from DR2H_RIPARTENZA_COLLAUDO_DR_TOvsPR
-#      register: sqlout
+    - debug:
+        var: sqlout
+      when: sqlout is defined
+
+    - name: query mssql server database - mssql_script
+      community.general.mssql_script:
+        login_user: WPDR0_TMC
+        login_password: WPDR0_TMC
+        login_host: mfoo.betatest.local 
+        db: WPDR0_DR2H_COLLAUDO
+        script: |
+          select * from DR2H_RIPARTENZA_COLLAUDO_DR_TOvsPR
+      register: sqlout1
+
+    - debug:
+        var: sqlout1
+      when: sqlout1 is defined
 
 #    - set_fact:
 #        sql_data1: "{{ sql_data1 | default([]) + [{ \
