--- a/query_oracle_db.yml
+++ b/query_oracle_db.yml
@@ -20,7 +20,8 @@
 
     - name: query oracle database
       community.general.odbc:
-        dsn: "DRIVER={Oracle Driver};DBQ=oradb19c.betatest.local:1521/OMUVF;UID=mgmt;PWD=8volante;"
+        dsn: "DRIVER={Oracle Driver};DBQ={{ ora_server }}:1521/{{ ora_sid }};UID={{ ora_usr }};PWD={{ ora_pwd }};"
+        #dsn: "DRIVER={Oracle Driver};DBQ=oradb19c.betatest.local:1521/OMUVF;UID=mgmt;PWD=8volante;"
         query: "select json_object(*) from HOSTS"
         commit: false
       register: sqlout
