--- a/query_mssql_server.yml
+++ b/query_mssql_server.yml
@@ -44,8 +44,8 @@
       register: sqlout1
 
     - debug:
-        var: sqlout1
-        #msg: "rowcount: {{ sqlout1.query_results | length }}"
+        #var: sqlout1
+        msg: "rowcount: {{ sqlout1.query_results | length }}"
       when: sqlout1 is defined
 
 #    - set_fact:
@@ -70,6 +70,4 @@
 #                   }] }}"
 #      with_items: "{{ sqlout.results }}"
 
-    - debug:
-        var: sqlout
 
